app/assets/stylesheets/_issues_and_tasks.scss
.issues,
.tasks {
  background-color: $pearl;

  h3,
  p {
    margin: 0;
  }

  .issue,
  .no-issue,
  .task,
  .no-task {
    padding: 1rem 1.5rem 1.5rem;
  }

  .issue,
  .task {
    &:nth-child(even) {
      background: $light-gray;
    }
  }

  .issue-header,
  .task-header {
    margin-bottom: .5rem;
  }

  .issue-type-tag,
  .task-type-tag {
    margin: .3rem 1rem 0 0;
    float: left;

    i {
      &::before {
        display: block;
        line-height: 1.4;
      }
    }
  }

  .issue-summary,
  .task-summary {
    margin-bottom: 0;
  }

  .issue-user,
  .task-user {
    margin-bottom: 1rem;
    font-size: 1.5rem;
    font-weight: bold;
  }
}

.issue-show-page,
.task-show-page {
  h2 {
    text-transform: none;
  }

  .issue-header {
    margin-bottom: 2rem;
  }
}

.issue-title,
.task-title {
  margin-bottom: 1.5rem;
}

.issue-task,
.task-issue,
.new-issue-task {
  i {
    font-size: 1.4rem;
  }
}

.new-issue-task {
  i {
    color: $dark-green;
  }
}

.issue-tasks {
  li {
    margin: 0 0 1rem;

    &:last-child {
      margin-bottom: 0;
    }
  }
}

.issue-user,
.issue-dates,
.task-user,
.task-dates {
  white-space: nowrap;
}

.assignee {
  white-space: nowrap;

  &:not(:last-child) {
    &::after {
      content: ',';
    }
  }
}

.issue-column,
.task-column {
  &.first-column {
    p,
    li {
      line-height: 1.4;
    }

    p,
    ul {
      margin-bottom: 3rem;
    }

    ul {
      list-style-type: none;
    }
  }
}

.issue-column-title,
.task-column-title {
  margin: 0 0 1rem;
  line-height: 1.1;
}

@include breakpoint(large up) {
  .issue-columns,
  .task-columns {
    display: flex;
    margin: 0 -1rem;

    .issue-column,
    .task-column {
      border: 0 solid transparent;
      border-width: 0 1rem;
    }

    .first-column {
      flex: 0 0 30rem;
      order: 2;
    }

    .second-column {
      flex: 1 1 auto;
      order: 1;
    }
  }
}

.breadcrumbs {
  display: flex;
  flex-wrap: wrap;
  margin: 0 -.25rem;

  .breadcrumb {
    border: 0 solid transparent;
    border-width: 0 .25rem;
    white-space: nowrap;

    &:not(:last-child) {
      &::after {
        content: '>';
        padding-left: .5rem;
      }
    }
  }
}

